Added menu layout

--- a/src/index.html
+++ b/src/index.html
@@ -47,10 +47,11 @@
         </div>
       </div>
     </article>
-    <article id="menu">
-      <div>
-        <h1>Kurang yakin denganmenu rekomendasi kami?</h1>
+    <article id="menu" class="flexbox-row">
+      <div class="flexbox-center">
+        <h1 class="font-light">Kurang yakin dengan<br/>menu rekomendasi kami?</h1>
       </div>
+      <img src="<%=require('./burger.png')%>">
     </article>
     <article>
       <h1>Review dari Pelanggan Kami</h1>
