--- a/src/index.html
+++ b/src/index.html
@@ -20,36 +20,35 @@
       </nav>
       <h1 id="WOTD" class="flexbox-center">Perut Kenyang,<br/>Dompet Aman</h1>
     </header>
-    <article id="recommendation" class="flexbox-center">
-      <div>
-        <h1>Menu rekomendasi hari ini</h1>
-        <div id="recommendation-container" class="flexbox-wrap flexbox-space-between">
-          <div class="recommendation-item">
-            <img src="<%=require('./menu_recc1.png')%>"/>
-            <h3>Nasi Gorent Ayam</h3>
-          </div>
-          <div class="recommendation-item">
-            <img src="<%=require('./menu_recc1.png')%>"/>
-            <h3>Nasi Gorent Ayam</h3>
-          </div>
-          <div class="recommendation-item">
-            <img src="<%=require('./menu_recc1.png')%>"/>
-            <h3>Nasi Gorent Ayam</h3>
-          </div>
-          <div class="recommendation-item">
-            <img src="<%=require('./menu_recc1.png')%>"/>
-            <h3>Nasi Gorent Ayam</h3>
-          </div>
-          <div class="recommendation-item">
-            <img src="<%=require('./menu_recc1.png')%>"/>
-            <h3>Nasi Gorent Ayam</h3>
-          </div>
+    <article id="recommendation" class="flexbox-center flexbox-column">
+      <h1>Menu rekomendasi hari ini</h1>
+      <div id="recommendation-container" class="flexbox-wrap flexbox-space-between">
+        <div class="recommendation-item">
+          <img src="<%=require('./menu_recc1.png')%>"/>
+          <h3>Nasi Gorent Ayam</h3>
+        </div>
+        <div class="recommendation-item">
+          <img src="<%=require('./menu_recc1.png')%>"/>
+          <h3>Nasi Gorent Ayam</h3>
+        </div>
+        <div class="recommendation-item">
+          <img src="<%=require('./menu_recc1.png')%>"/>
+          <h3>Nasi Gorent Ayam</h3>
+        </div>
+        <div class="recommendation-item">
+          <img src="<%=require('./menu_recc1.png')%>"/>
+          <h3>Nasi Gorent Ayam</h3>
+        </div>
+        <div class="recommendation-item">
+          <img src="<%=require('./menu_recc1.png')%>"/>
+          <h3>Nasi Gorent Ayam</h3>
         </div>
       </div>
     </article>
     <article id="menu" class="flexbox-row">
-      <div class="flexbox-center">
+      <div class="flexbox-center flexbox-column">
         <h1 class="font-light">Kurang yakin dengan<br/>menu rekomendasi kami?</h1>
+        <a class="button-primary">Lihat Menu</a>
       </div>
       <img src="<%=require('./burger.png')%>">
     </article>
