Added overlay to banner

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header id="header">
+    <header id="banner" role="banner">
       <nav class="flexbox-space-between flexbox-vcenter">
-        <object type="image/svg+xml" data="<%=require('./logo.svg')%>" id="logo-header">
+        <object type="image/svg+xml" data="<%=require('./logo.svg')%>" id="logo-banner">
           Wuenak Tenan
         </object>
         <div class="nav-links flexbox-space-between">
@@ -18,7 +18,7 @@
           <a>Contact Us</a>
         </div>
       </nav>
-      <h1 id="WOTD" class="flexbox-center">Perut Kenyang,<br/>Dompet Aman</h1>
+      <h1 id="WOTD" class="flexbox-center font-light">Perut Kenyang,<br/>Dompet Aman</h1>
     </header>
     <article id="recommendation" class="flexbox-center flexbox-column">
       <h1>Menu rekomendasi hari ini</h1>
