--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header id="banner" role="banner">
+    <header id="banner">
       <nav class="flexbox-space-between flexbox-vcenter">
         <object type="image/svg+xml" data="<%=require('./logo.svg')%>" id="logo-banner">
           Wuenak Tenan
@@ -23,26 +23,26 @@
     <article id="recommendation" class="flexbox-center flexbox-column">
       <h1>Menu rekomendasi hari ini</h1>
       <div id="recommendation-container" class="flexbox-wrap flexbox-space-between">
-        <div class="recommendation-item">
+        <section class="recommendation-item">
           <img src="<%=require('./menu_recc1.png')%>"/>
           <h3>Nasi Gorent Ayam</h3>
-        </div>
-        <div class="recommendation-item">
+        </section>
+        <section class="recommendation-item">
           <img src="<%=require('./menu_recc1.png')%>"/>
           <h3>Nasi Gorent Ayam</h3>
-        </div>
-        <div class="recommendation-item">
+        </section>
+        <section class="recommendation-item">
           <img src="<%=require('./menu_recc1.png')%>"/>
           <h3>Nasi Gorent Ayam</h3>
-        </div>
-        <div class="recommendation-item">
+        </section>
+        <section class="recommendation-item">
           <img src="<%=require('./menu_recc1.png')%>"/>
           <h3>Nasi Gorent Ayam</h3>
-        </div>
-        <div class="recommendation-item">
+        </section>
+        <section class="recommendation-item">
           <img src="<%=require('./menu_recc1.png')%>"/>
           <h3>Nasi Gorent Ayam</h3>
-        </div>
+        </section>
       </div>
     </article>
     <article id="menu" class="flexbox-row">
@@ -52,8 +52,25 @@
       </div>
       <img src="<%=require('./burger.png')%>">
     </article>
-    <article>
+    <article id="reviews" class="flexbox-center flexbox-column">
       <h1>Review dari Pelanggan Kami</h1>
+      <div id="review-container" class="flexbox-wrap flexbox-space-between">
+        <section>
+          <img src="<%=require('./reviewer1.png')%>">
+          <h3>Jefferson, <span class="reviewer-occupation">Mahasiswa</span></h3>
+          <p>Wuenak Tenan sudah membantu saya melewati masa sulit. Pola makan saya menjadi teratur dan juga sehat.</p>
+        </section>
+        <section>
+          <img src="<%=require('./reviewer1.png')%>">
+          <h3>Jefferson, <span class="reviewer-occupation">Mahasiswa</span></h3>
+          <p>Wuenak Tenan sudah membantu saya melewati masa sulit. Pola makan saya menjadi teratur dan juga sehat.</p>
+        </section>
+        <section>
+          <img src="<%=require('./reviewer1.png')%>">
+          <h3>Jefferson, <span class="reviewer-occupation">Mahasiswa</span></h3>
+          <p>Wuenak Tenan sudah membantu saya melewati masa sulit. Pola makan saya menjadi teratur dan juga sehat.</p>
+        </section>
+      </div>
     </article>
     <footer id="footer">
     </footer>
