Minor size adjustment for recommendation and footer article

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,10 @@
           <img src="<%=require('./menu_recc1.png')%>"/>
           <h3>Nasi Gorent Ayam</h3>
         </section>
+        <section class="recommendation-item">
+          <img src="<%=require('./menu_recc1.png')%>"/>
+          <h3>Nasi Gorent Ayam</h3>
+        </section>
       </div>
     </article>
     <article id="menu" class="flexbox-row">
