Added main-footer component
Refactor <footer> to main-footer

--- a/src/index.html
+++ b/src/index.html
@@ -54,35 +54,6 @@
         </section>
       </div>
     </article>
-    <footer id="footer">
-      <hr/>
-      <div class="flexbox-space-between">
-        <section id="contact-us" class="flexbox-column flexbox-align-between">
-          <h4>Contact Us</h4>
-          <p>081234567890</p>
-          <p>wuenak.tenan@gmail.com</p>
-          <p>Jl. Kebon Jeruk Raya No. 27 Kebon Jeruk, Jakarta Barat 11530</p>
-        </section>
-        <object type="image/svg+xml" data="<%=require('./logo.svg')%>" id="logo-banner">
-          Wuenak Tenan
-        </object>
-        <section id="social-media-container" class="flexbox-column">
-          <h4>Social Media</h4>
-          <div class="social-media flexbox-row flexbox-vcenter">
-            <img src="<%=require('./logo-ig.png')%>">
-            <p>@wuenak.tenan</p>
-          </div>
-          <div class="social-media flexbox-row flexbox-vcenter">
-            <img src="<%=require('./logo-fb.png')%>">
-            <p>Wuenak Tenan</p>
-          </div>
-          <div class="social-media flexbox-row flexbox-vcenter">
-            <img src="<%=require('./logo-ln.png')%>">
-            <p>wuenaktenan</p>
-          </div>
-        </section>
-      </div>
-      <hr/>
-    </footer>
+    <main-footer></main-footer>
   </body>
 </html>
