--- a/src/menu.html
+++ b/src/menu.html
@@ -7,7 +7,10 @@
     <%=require('html-loader!./fonts-link.html').default%>
   </head>
   <body>
-
+    <article>
+      <menu-bundle></menu-bundle>
+      <menu-bundle></menu-bundle>
+    </article>
     <main-footer></main-footer>
   </body>
 </html>
