Modified menu-bundle to accept content modification from HTML

--- a/src/menu.html
+++ b/src/menu.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <article>
-      <menu-bundle></menu-bundle>
-      <menu-bundle></menu-bundle>
+      <menu-bundle thumbnail="<%=require('./menu_a.png')%>" title="Hello!">
+        no!
+      </menu-bundle>
     </article>
     <main-footer></main-footer>
   </body>
