Added light/dark variant styles

--- a/src/menu.html
+++ b/src/menu.html
@@ -7,6 +7,7 @@
     <%=require('html-loader!./fonts-link.html').default%>
   </head>
   <body>
+    <main-nav class="light-theme"></main-nav>
     <article>
       <menu-bundle thumbnail="<%=require('./menu_a.png')%>" title="Hello!">
         no!
