Added Placard component

--- a/src/index.html
+++ b/src/index.html
@@ -37,13 +37,9 @@
         </section>
       </div>
     </article>
-    <article id="menu" class="flexbox-row">
-      <div class="flexbox-center flexbox-column">
-        <h1 class="font-light">Kurang yakin dengan<br/>menu rekomendasi kami?</h1>
-        <a class="button-primary">Lihat Menu</a>
-      </div>
-      <img src="<%=require('./burger.png')%>">
-    </article>
+    <c-placard img="<%=require('./burger.png')%>">
+      Kurang yakin dengan<br/>menu rekomendasi kami?
+    </c-placard>
     <article id="reviews" class="flexbox-center flexbox-column">
       <h1>Review dari Pelanggan Kami</h1>
       <div id="review-container" class="flexbox-wrap flexbox-space-between">
