Added direction attribute to Placard

--- a/src/menu.html
+++ b/src/menu.html
@@ -19,6 +19,9 @@
         no!
       </menu-bundle>
     </main>
+    <c-placard img="<%=require('./burger.png')%>" direction="right">
+      Kurang yakin dengan<br/>menu rekomendasi kami?
+    </c-placard>
     <main-footer></main-footer>
   </body>
 </html>
