Menu page placehold done

--- a/src/menu.html
+++ b/src/menu.html
@@ -18,6 +18,12 @@
       <menu-bundle thumbnail="<%=require('./menu_a.png')%>" title="Hello!">
         no!
       </menu-bundle>
+      <menu-bundle thumbnail="<%=require('./menu_a.png')%>" title="Hello!">
+        no!
+      </menu-bundle>
+      <menu-bundle thumbnail="<%=require('./menu_a.png')%>" title="Hello!">
+        no!
+      </menu-bundle>
     </main>
     <c-placard img="<%=require('./burger.png')%>" direction="right">
       Kurang yakin dengan<br/>menu rekomendasi kami?
