--- a/src/index.html
+++ b/src/index.html
@@ -1,55 +1,59 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
+
+<head>
     <title>Wuenak Tenan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%=require('html-loader!./fonts-link.html').default%>
-  </head>
-  <body>
+</head>
+
+<body>
     <main-header></main-header>
     <article id="recommendation" class="flexbox-center flexbox-column">
-      <h1>Menu rekomendasi hari ini</h1>
-      <div id="recommendation-container" class="flexbox-wrap flexbox-space-between">
-        <section class="recommendation-item">
-          <img src="<%=require('./menu_recc1.png')%>"/>
-          <h3>Nasi Gorent Ayam</h3>
-        </section>
-        <section class="recommendation-item">
-          <img src="<%=require('./menu_recc1.png')%>"/>
-          <h3>Nasi Gorent Ayam</h3>
-        </section>
-        <section class="recommendation-item">
-          <img src="<%=require('./menu_recc1.png')%>"/>
-          <h3>Nasi Gorent Ayam</h3>
-        </section>
-        <section class="recommendation-item">
-          <img src="<%=require('./menu_recc1.png')%>"/>
-          <h3>Nasi Gorent Ayam</h3>
-        </section>
-        <section class="recommendation-item">
-          <img src="<%=require('./menu_recc1.png')%>"/>
-          <h3>Nasi Gorent Ayam</h3>
-        </section>
-        <section class="recommendation-item">
-          <img src="<%=require('./menu_recc1.png')%>"/>
-          <h3>Nasi Gorent Ayam</h3>
-        </section>
-      </div>
+        <h1>Menu rekomendasi hari ini</h1>
+        <div id="recommendation-container" class="flexbox-wrap flexbox-space-between">
+            <section class="recommendation-item">
+                <img src="<%=require('./menu_recc1.png')%>" />
+                <h3>Nasi Gorent Ayam</h3>
+            </section>
+            <section class="recommendation-item">
+                <img src="<%=require('./menu_recc1.png')%>" />
+                <h3>Nasi Gorent Ayam</h3>
+            </section>
+            <section class="recommendation-item">
+                <img src="<%=require('./menu_recc1.png')%>" />
+                <h3>Nasi Gorent Ayam</h3>
+            </section>
+            <section class="recommendation-item">
+                <img src="<%=require('./menu_recc1.png')%>" />
+                <h3>Nasi Gorent Ayam</h3>
+            </section>
+            <section class="recommendation-item">
+                <img src="<%=require('./menu_recc1.png')%>" />
+                <h3>Nasi Gorent Ayam</h3>
+            </section>
+            <section class="recommendation-item">
+                <img src="<%=require('./menu_recc1.png')%>" />
+                <h3>Nasi Gorent Ayam</h3>
+            </section>
+        </div>
     </article>
     <c-placard img="<%=require('./burger.png')%>">
-      Kurang yakin dengan<br/>menu rekomendasi kami?
+        Kurang yakin dengan<br />menu rekomendasi kami?
     </c-placard>
     <article id="reviews" class="flexbox-center flexbox-column">
-      <h1>Review dari Pelanggan Kami</h1>
-      <div id="review-container" class="flexbox-wrap flexbox-space-between">
-        <section class="review-item">
-          <img src="<%=require('./reviewer1.png')%>">
-          <h3>Jefferson, <span class="reviewer-occupation">Mahasiswa</span></h3>
-          <p>Wuenak Tenan sudah membantu saya melewati masa sulit. Pola makan saya menjadi teratur dan juga sehat.</p>
-        </section>
-      </div>
+        <h1>Review dari Pelanggan Kami</h1>
+        <div id="review-container" class="flexbox-wrap flexbox-space-between">
+            <section class="review-item">
+                <img src="<%=require('./reviewer1.png')%>">
+                <h3>Jefferson, <span class="reviewer-occupation">Mahasiswa</span></h3>
+                <p>Wuenak Tenan sudah membantu saya melewati masa sulit. Pola makan saya menjadi teratur dan juga sehat.
+                </p>
+            </section>
+        </div>
     </article>
     <main-footer></main-footer>
-  </body>
+</body>
+
 </html>
