Modified main-header to accept custom WOTD and background image

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <main-header></main-header>
+    <main-header src="<%=require('./banner.png')%>">
+        Perut Kenyang,<br/>Dompet Aman
+    </main-header>
     <article id="recommendation" class="flexbox-center flexbox-column">
         <h1>Menu rekomendasi hari ini</h1>
         <div id="recommendation-container" class="flexbox-wrap flexbox-space-between">
