Added contact-us page layout

--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -9,9 +9,20 @@
 </head>
 
 <body>
-    <main-header class="light-theme"></main-header>
+    <main-header src="<%=require('./banner2.png')%>">
+        Ada masalah? Kami bantu
+    </main-header>
     <main>
-
+        <h2>Contact Form</h2>
+        <form>
+            <div id="input-container">
+                <input type="text" name="name" placeholder="Nama lengkap: Johnny Sin" required>
+                <input type="email" name="email" placeholder="Surel: john22@hotmail.com" required>
+                <input type="text" name="subject" placeholder="Subjek: Makan wuenak" required>
+                <textarea name="area" placeholder="Message..." required></textarea>
+            </div>
+            <input class="button-primary" type="submit" value="Kirim">
+        </form>
     </main>
     <main-footer></main-footer>
 </body>
