--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <main-header src="<%=require('./banner.png')%>">
-        Perut Kenyang,<br/>Dompet Aman
+        Perut Kenyang, Dompet Aman
     </main-header>
     <article id="recommendation" class="flexbox-center flexbox-column">
         <h1>Menu rekomendasi hari ini</h1>
