--- a/src/index.html
+++ b/src/index.html
@@ -10,34 +10,34 @@
 
 <body>
     <main-header src="<%=require('./banner.png')%>">
-        Perut Kenyang, Dompet Aman
+        Perut Kenyang, <br> Dompet Aman
     </main-header>
     <article id="recommendation" class="flexbox-center flexbox-column">
         <h1>Menu rekomendasi hari ini</h1>
         <div id="recommendation-container" class="flexbox-wrap flexbox-space-between">
             <section class="recommendation-item">
                 <img src="<%=require('./menu_recc1.png')%>" />
-                <h3>Nasi Gorent Ayam</h3>
+                <h3>Nasi Goreng Ayam</h3>
             </section>
             <section class="recommendation-item">
-                <img src="<%=require('./menu_recc1.png')%>" />
-                <h3>Nasi Gorent Ayam</h3>
+                <img src="<%=require('./menu_recc2.png')%>" />
+                <h3>Gado - Gado</h3>
             </section>
             <section class="recommendation-item">
-                <img src="<%=require('./menu_recc1.png')%>" />
-                <h3>Nasi Gorent Ayam</h3>
+                <img src="<%=require('./menu_recc3.png')%>" />
+                <h3>Nasi Kulit Ayamk</h3>
             </section>
             <section class="recommendation-item">
-                <img src="<%=require('./menu_recc1.png')%>" />
-                <h3>Nasi Gorent Ayam</h3>
+                <img src="<%=require('./menu_recc4.png')%>" />
+                <h3>Selat Solo</h3>
             </section>
             <section class="recommendation-item">
-                <img src="<%=require('./menu_recc1.png')%>" />
-                <h3>Nasi Gorent Ayam</h3>
+                <img src="<%=require('./menu_recc5.png')%>" />
+                <h3>Capcay seafood</h3>
             </section>
             <section class="recommendation-item">
-                <img src="<%=require('./menu_recc1.png')%>" />
-                <h3>Nasi Gorent Ayam</h3>
+                <img src="<%=require('./menu_recc6.png')%>" />
+                <h3>Laksa Medan</h3>
             </section>
         </div>
     </article>
@@ -51,6 +51,18 @@
                 <img src="<%=require('./reviewer1.png')%>">
                 <h3>Jefferson, <span class="reviewer-occupation">Mahasiswa</span></h3>
                 <p>Wuenak Tenan sudah membantu saya melewati masa sulit. Pola makan saya menjadi teratur dan juga sehat.
+                </p>
+            </section>
+            <section class="review-item">
+                <img src="<%=require('./reviewer2.png')%>">
+                <h3>Linda, <span class="reviewer-occupation">Pengusaha</span></h3>
+                <p>Semenjak katering kantor beralih ke Wuenak Tenan, makanan yang ada di kantor mulai bervariasi dan tidak membosankan.
+                </p>
+            </section>
+            <section class="review-item">
+                <img src="<%=require('./reviewer3.png')%>">
+                <h3>Jay, <span class="reviewer-occupation">Event Organizer</span></h3>
+                <p>Baru kali ini ada katering yang harganya benar-benar terjangkau. Client juga aku rekomendasiin untuk menggunakan katering ini biar budgetnya bisa dialokasikan ke bagian lain.
                 </p>
             </section>
         </div>
