--- a/src/menu.html
+++ b/src/menu.html
@@ -17,18 +17,38 @@
             <h1>Menu Paketan</h1>
             <h4>11 September 2021 - 16 September 2021</h4>
         </div>
-        <menu-bundle thumbnail="<%=require('./menu_a.png')%>" title="Hello!">
-            no!
+        <menu-bundle thumbnail="<%=require('./menu_kotak_a.png')%>" title="Nasi Kotak A">
+            Nasi Putih<br>
+            Teri Kacang<br>
+            Telur Balado<br>
+            Mie Goreng<br>
+            Kacang Panjang Bali<br>
+            Ayam Suwir Bali<br>
+            Sambal Matah
         </menu-bundle>
-        <menu-bundle thumbnail="<%=require('./menu_a.png')%>" title="Hello!">
-            no!
+        <menu-bundle thumbnail="<%=require('./menu_kotak_b.png')%>" title="Nasi Kotak B">
+            Nasi Putih<br>
+            Abon Nori<br>
+            Chicken Katsu<br>
+            Beef Teriyaki<br>
+            Japanese Salad<br>
+            Mayonaise<br>
         </menu-bundle>
-        <menu-bundle thumbnail="<%=require('./menu_a.png')%>" title="Hello!">
-            no!
+        <menu-bundle thumbnail="<%=require('./menu_kotak_c.png')%>" title="Nasi Kotak C">
+            Nasi Gurih<br>
+            Teri Medan<br>
+            Teri Kacang<br>
+            Bawang Goreng<br>
+            Ayam Goreng Kuning<br>
+            Tahu dan Tempe Goreng<br>
+            Telur Asin<br>
+            Lalapan<br>
+            Sambal Terasi<br>
         </menu-bundle>
     </main>
-    <c-placard img="<%=require('./burger.png')%>" direction="right" href="./custom-menu.html">
-        Kurang yakin dengan<br />menu rekomendasi kami?
+    <c-placard img="<%=require('./start-custom.png')%>" direction="right" href="./custom-menu.html">
+        Tidak cocok dengan Menu Paketan?<br/>
+        Ayo Rancang Isi Nasi Kotakmu Sendiri!
     </c-placard>
     <main-footer></main-footer>
 </body>
