update the "about us" page with faces now (#3)
Squashed

--- a/src/about-us.html
+++ b/src/about-us.html
@@ -15,7 +15,7 @@
     <main class="flexbox-column">
         <!-- Fuck it, am too lazy.-->
         <div class="profile flexbox-row">
-            <img src="https://via.placeholder.com/300" />
+            <img src="<%=require('./Russell.jpg')%>" />
             <div class="flexbox-vcenter">
                 <h4>
                     Daniel Russell Alexander<br/>
@@ -30,10 +30,10 @@
                     2301853786
                 </h4>
             </div>
-            <img src="https://via.placeholder.com/300" />
+            <img src="<%=require('./Anwar.png')%>" />
         </div>
         <div class="profile flexbox-row">
-            <img src="https://via.placeholder.com/300" />
+            <img src="<%=require('./Wirandy.jpg')%>" />
             <div class="flexbox-vcenter">
                 <h4>
                     Wirandy Indrawan<br/>
@@ -48,10 +48,10 @@
                     2301914743
                 </h4>
             </div>
-            <img src="https://via.placeholder.com/300" />
+            <img src="<%=require('./Raznan.jpg')%>" />
         </div>    
         <div class="profile flexbox-row">
-            <img src="https://via.placeholder.com/300" />
+            <img src="<%=require('./Shane.jpg')%>" />
             <div class="flexbox-vcenter">
                 <h4>
                     Shane Wibowo<br/>
