Added href to index placard and updated docs

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
             </section>
         </div>
     </article>
-    <c-placard img="<%=require('./burger.png')%>">
+    <c-placard img="<%=require('./burger.png')%>" href="./menu.html">
         Kurang yakin dengan<br />menu rekomendasi kami?
     </c-placard>
     <article id="reviews" class="flexbox-center flexbox-column">
